--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,13 @@
 name: jiffy
 description: Jiffy is a date dart package inspired by momentjs for parsing, manipulating and formatting dates
-version: 3.0.1
-homepage: https://github.com/jama5262/jiffy
-repository: https://github.com/jama5262/jiffy
-issue_tracker: https://github.com/jama5262/jiffy/issues
-documentation: https://github.com/jama5262/jiffy/tree/master/doc
-author: Jama Mohamed <jama3137@gmail.com>
+version: 3.0.2
+author: Tamilarasan
 
 environment:
   sdk: '>=2.4.0 <3.0.0'
 
 dependencies:
-  intl: ^0.16.0
+  intl: 0.17.0-nullsafety.2
 
 dev_dependencies:
   pedantic: ^1.7.0
