--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,10 @@ version: 3.0.2
 author: Tamilarasan
 
 environment:
-  sdk: '>=2.4.0 <3.0.0'
+  sdk: '>=2.7.0 <3.0.0'
 
 dependencies:
-  intl: 0.17.0-nullsafety.2
+  intl: 0.17.0
 
 dev_dependencies:
   pedantic: ^1.7.0
